# weatherdata

./: .dockerignore  .envrc  .gitignore  README.md  cli.py  demo.py  noxfile.py  pyproject.toml  ruff.toml
.direnv/: .env.example  .secrets.example
.github/workflows/: lint-format.yml  lint-format.yml.bak
.jobs/: .gitignore
.jobs/data/: example.collect_weather_data.json  example.import_weather_data.json
applications/api/: pyproject.toml
applications/api/src/api/: __init__.py  constants.py  healthcheck.py  main.py  start_api.py  tag_definitions.py
applications/api/src/api/helpers/response_helpers/: __init__.py  _helpers.py
applications/api/src/api/responses/: __init__.py  _responses.py
applications/api/src/api/routers/: api_router.py  healthcheck.py
applications/api/src/api/routers/weather/: __init__.py  current_weather_router.py  weather_forecast_router.py  weather_router.py
applications/api/src/api/utils/: __init__.py  utils.py
applications/api/src/api/validators/: __init__.py  __validators.py
applications/cli/: pyproject.toml
applications/cli/src/weather_cli/: __main__.py  celery.py  db.py  main.py  setup.py  weather.py
applications/cli/src/weather_cli/_alembic/: _cli.py
applications/data-mover/: pyproject.toml
applications/data-mover/src/data_mover/: __init__.py  main.py
applications/weather-client/src/weather_client/apis/api_weatherapi/: __init__.py  constants.py  settings.py
applications/weather-client/src/weather_client/apis/api_weatherapi/client/: __init__.py  current.py  forecast.py  requests.py
config/: .secrets.toml  settings.toml
config/celery/: .secrets.toml  settings.toml
config/database/: .secrets.toml  settings.toml
config/dramatiq/: .secrets.toml  settings.toml
config/fastapi/: settings.toml
config/openmeteo/: .secrets.toml  settings.toml
config/uvicorn/: .secrets.toml  settings.toml
config/weatherapi/: .secrets.toml  settings.toml
containers/: .env.example  README.md  compose.yml  db-messaging.compose.yml  db.compose.yml  dev.compose.yml  messaging.compose.yml  test.compose.yml
containers/dockerfiles/: Dockerfile  celery.Dockerfile  dev.Dockerfile  old.celery.Dockerfile
containers/entrypoints/: dev.entrypoint.sh
containers/entrypoints/pg_entrypoint/: pg_entrypoint.sh
containers/envs/: dev.app.env.example  dev.celery.env.example  dev.env.example  dev.messaging.env.example
containers/overlays/: alembic-migrate.yml  celery-beat.yml  celery-worker.yml  db_init.yml  postgres.yml  rabbitmq.yml  redis-commander.yml  redis.yml
containers/rabbitmq/: .env.example  .gitignore  compose.yml
containers/rabbitmq-redis/: .env.example  compose.yml
containers/rabbitmq-redis/provision/: rabbitmq.example.conf  redis.example.conf
containers/rabbitmq/provision/: example.rabbitmq.config
containers/redis/: .env.example  compose.yml
containers/redis/provision/: redis.conf  redis.example.conf
migrations/: env.py
migrations/versions/: b5e7b5cfaa92_autogenerated_migration.py  fda24ca3a9db_autogenerated_migration.py  fdc81ab542c5_autogenerated_migration.py
sandbox/: count_db_items.py
sandbox/api_demo/: api_demo.py
sandbox/db_dump/: db_dump_controller.py  sandbox_db_dump.py
sandbox/demo/: demo.py
sandbox/loop_weather/: loop_weather_requests.py
sandbox/meteo_sandbox/: demo.py
sandbox/multi_location/: .gitignore  example.locations.json  locations.json  multilocation.py
sandbox/task_scheduler/: adhoc_tasks.py  celery_beat.py  celery_worker.py  schedule_lib.py  scheduler.py
scripts/: prune_git_branches.sh
scripts/celery/: get_current_weather.py  get_weather_forecast.py  start_beat.py  start_celery.py  start_worker.py
scripts/db/: count_rows.py  dump_mysql_db.py  dump_postgres_db.py  init_db.py  show_tablenames.py
scripts/debug/: debug_settings.py
scripts/docker/: dev_stack.sh  docker_ctl.sh  start_dev_stack.sh
scripts/minio/: minio_ctl.py
scripts/repo/: git_clean_branches.sh
scripts/schedules/weatherapi/current/: every_15th_minute_current_weather.py
