[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
