[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.11"
dependencies = [
    "core-utils",
    "cyclopts>=3.1.2",
    "database",
    "depends",
    "domain",
    "dynaconf>=3.2.6",
    "pydantic>=2.10.4",
    "settings",
    "setup",
]

[project.scripts]
weather_cli = "weather_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_cli"]

[tool.uv.sources]
settings = { workspace = true }
database = { workspace = true }
core-utils = { workspace = true }
setup = { workspace = true }
domain = { workspace = true }
depends = { workspace = true }
