[project]
name = "data-mover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.1.2",
    "database",
    "depends",
    "domain",
    "duckdb>=1.3.1",
    "dynaconf>=3.2.6",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
data-mover = "data_mover:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
database = { workspace = true }
depends = { workspace = true }
domain = { workspace = true }
