[project]
name = "data-mover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.1.2",
    "database",
    "depends",
    "domain",
    "duckdb>=1.3.1",
    "duckdb-engine>=0.17.0",
    "dynaconf>=3.2.6",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "pymysql>=1.1.1",
    "dynaconf>=3.2.6",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "pymysql>=1.1.1",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
data-mover = "data_mover:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
database = { workspace = true }
depends = { workspace = true }
domain = { workspace = true }
